--- a/Go_Laundry/app/src/main/res/layout/activity_admin_edit_order.xml
+++ b/Go_Laundry/app/src/main/res/layout/activity_admin_edit_order.xml
@@ -3,19 +3,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="138dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnAdminEditUbah"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="0"
+            android:background="@drawable/ic_done"
+            android:text="" />
+
+        <Button
+            android:id="@+id/btnAdminEditBack"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignTop="@+id/btnAdminEditUbah"
+            android:layout_toEndOf="@+id/txtAdminEditNmUser"
+            android:layout_weight="0"
+            android:background="@drawable/ic_arrow_back_24dp"
+            android:text="" />
+    </LinearLayout>
+
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/txtAdminEditNmUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/editText"
+        android:layout_alignStart="@+id/edtAdminEditStatusPakaian"
         android:layout_marginTop="132dp"
         android:layout_weight="1"
         android:text="Nama User"
         android:textSize="24sp" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/edtAdminEditStatusPakaian"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -25,25 +54,8 @@
         android:inputType="textPersonName"
         android:text="Status Pakaian" />
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/editText"
-        android:layout_marginBottom="165dp"
-        android:text="Ubah" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/editText"
-        android:layout_alignTop="@+id/button4"
-        android:text="Kembali" />
-
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/edtAdminEditStatusAntar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
