--- a/Go_Laundry/app/src/main/res/layout/activity_admin_home.xml
+++ b/Go_Laundry/app/src/main/res/layout/activity_admin_home.xml
@@ -16,32 +16,45 @@
         app:srcCompat="@drawable/banner_home" />
 
     <Button
-        android:id="@+id/btnCustomerPesan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="163dp"
+        android:id="@+id/btnAdminListOrder"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/btnAdminProfil"
+        android:layout_marginStart="77dp"
         android:layout_weight="1"
-        android:text="List Orderan" />
+        android:background="@drawable/ic_list_24dp"
+        android:text="" />
+
+    <Button
+        android:id="@+id/btnAdminListCust"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/btnAdminProfil"
+        android:layout_marginEnd="77dp"
+        android:layout_weight="1"
+        android:background="@drawable/ic_people"
+        android:text="" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txtAdminHomeNama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="122dp"
+        android:layout_marginBottom="225dp"
         android:text="Nama Admin" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/btnAdminProfil"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="42dp"
-        android:text="Pengaturan Akun" />
+        android:layout_marginBottom="124dp"
+        android:background="@drawable/ic_akun__black_24dp"
+        android:text="" />
 
     <TextView
         android:id="@+id/textView8"
