--- a/Go_Laundry/app/src/main/res/layout/activity_admin_orderan.xml
+++ b/Go_Laundry/app/src/main/res/layout/activity_admin_orderan.xml
@@ -14,14 +14,16 @@
         android:textSize="24sp" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyAdminOrder"
         android:layout_width="match_parent"
-        android:layout_height="414dp"
+        android:layout_height="400dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="0dp" />
+        android:layout_marginEnd="0dp"
+        android:layout_weight="2" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btnAdminOrderanBack"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Kembali" />
