--- a/Go_Laundry/app/src/main/res/layout/activity_customer_home.xml
+++ b/Go_Laundry/app/src/main/res/layout/activity_customer_home.xml
@@ -16,40 +16,42 @@
         app:srcCompat="@drawable/banner_home" />
 
     <Button
-        android:id="@+id/btnCustomerPesan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/btnAdminListOrder"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="163dp"
         android:layout_marginStart="62dp"
         android:layout_weight="1"
-        android:text="Mulai Pesan" />
+        android:background="@drawable/ic_message_black_24dp"
+        android:text="" />
 
     <Button
         android:id="@+id/btnCustomerCek"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/btnCustomerPesan"
+        android:layout_alignTop="@+id/btnAdminListOrder"
         android:layout_marginEnd="52dp"
-        android:text="Cek Pesanan" />
+        android:background="@drawable/ic_check_black_24dp"
+        android:text="" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="118dp"
+        android:layout_marginTop="213dp"
         android:text="Nama User" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignTop="@+id/btnAdminListOrder"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="38dp"
-        android:text="Pengaturan Akun" />
+        android:background="@drawable/ic_akun__black_24dp"
+        android:text="" />
 </RelativeLayout>
