--- a/Go_Laundry/app/src/main/res/layout/activity_customer_sign_up.xml
+++ b/Go_Laundry/app/src/main/res/layout/activity_customer_sign_up.xml
@@ -1,111 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    tools:context="com.example.abdazizs.go_loundry.Customer.CRUD.CustomerAddData">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
+    <EditText
+        android:id="@+id/editCustDaftarUsername"
+        android:layout_width="199dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:gravity="bottom"
-        android:orientation="vertical">
+        android:layout_alignStart="@+id/btnCustTmbhDaftar"
+        android:layout_marginTop="185dp"
+        android:ems="10"
+        android:inputType="text" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
-            android:paddingTop="20dp"
-            android:text="Go Laundry"
-            android:textAlignment="center"
-            android:textColor="@android:color/background_dark"
-            android:textSize="36sp"
-            android:textStyle="bold" />
 
-        <!--<TextView-->
-        <!--android:id="@+id/textView2"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:paddingBottom="20dp"-->
-        <!--android:text="Sign Up to See Photos and videos from your firends"-->
-        <!--android:textAlignment="center"-->
-        <!--android:textColor="@color/cardview_dark_background"-->
-        <!--android:textSize="18sp" />-->
+    <Button
+        android:id="@+id/btnCustTmbhDaftar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Daftar" />
 
-        <LinearLayout
-            android:layout_width="255dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="center"
-            android:layout_marginBottom="31dp"
-            android:orientation="vertical">
+    <Button
+        android:id="@+id/btnCustDaftarCancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/editCustDaftarUsername"
+        android:layout_alignTop="@+id/btnCustTmbhDaftar"
+        android:text="Cancel" />
 
-            <EditText
-                android:id="@+id/editUserameSignU"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="20dp"
-                android:hint="Username"
-                android:inputType="text"
-                android:paddingBottom="10dp"
-                android:textColor="@android:color/background_dark" />
+    <EditText
+        android:id="@+id/editCustDaftarAlamat"
+        android:layout_width="199dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/editCustDaftarUsername"
+        android:layout_centerVertical="true"
+        android:ems="10"
+        android:inputType="textMultiLine" />
 
-            <EditText
-                android:id="@+id/editAlamat"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="20dp"
-                android:hint="Alamat"
-                android:inputType="text"
-                android:maxLength="120"
-                android:paddingBottom="10dp"
-                android:textColor="@android:color/background_dark" />
+    <EditText
+        android:id="@+id/editAddCustTelpn"
+        android:layout_width="199dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/editCustDaftarUsername"
+        android:layout_below="@+id/editCustDaftarAlamat"
+        android:ems="10"
+        android:inputType="textPersonName" />
 
-            <EditText
-                android:id="@+id/edtphone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="20dp"
-                android:hint="Phone"
-                android:inputType="number"
-                android:paddingBottom="10dp"
-                android:textColor="@android:color/background_dark" />
+    <EditText
+        android:id="@+id/editCustDaftarPass"
+        android:layout_width="199dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/editCustDaftarUsername"
+        android:layout_below="@+id/editAddCustTelpn"
+        android:ems="10"
+        android:inputType="textPassword" />
 
-            <EditText
-                android:id="@+id/editPassSignU"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="20dp"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:maxLength="10"
-                android:paddingBottom="10dp"
-                android:textColor="@android:color/background_dark" />
+    <!--<EditText-->
+    <!--android:id="@+id/editUlangiPass"-->
+    <!--android:layout_width="200dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_alignStart="@+id/editDaftarUsername"-->
+    <!--android:layout_marginBottom="62dp"-->
+    <!--android:ems="10"-->
+    <!--android:inputType="textPassword" />-->
 
-            <Button
-                android:id="@+id/btnSignUp"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/editText5"
-                android:layout_alignParentBottom="true"
-                android:layout_marginTop="20dp"
-                android:text="SIgn Up"
-                android:textColor="@android:color/background_dark" />
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/editCustDaftarUsername"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="34dp"
+        android:text="Username" />
 
-        </LinearLayout>
-    </LinearLayout>
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/editCustDaftarAlamat"
+        android:layout_alignStart="@+id/textView9"
+        android:text="Alamat" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/editAddCustTelpn"
+        android:layout_alignStart="@+id/textView9"
+        android:text="Telp" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/editCustDaftarPass"
+        android:layout_alignStart="@+id/textView9"
+        android:text="Password" />
+
+    <!--<TextView-->
+    <!--android:id="@+id/textView14"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignBaseline="@+id/editUlangiPass"-->
+    <!--android:layout_alignStart="@+id/textView9"-->
+    <!--android:text="Ualngi Password" />-->
+
+    <ImageView
+        android:id="@+id/ImgCustDaftar"
+        android:layout_width="136dp"
+        android:layout_height="113dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        app:srcCompat="@drawable/ic_user" />
+
+    <Button
+        android:id="@+id/btnCustTmbhImgDaftar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editCustDaftarUsername"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-177dp"
+        android:text="Ambil Gambal" />
+
+    <TextView
+        android:id="@+id/txtMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/textView9"
+        android:layout_marginBottom="106dp"
+        android:text="TextView" />
 
 </RelativeLayout>
