--- a/Go_Laundry/app/src/main/res/layout/item_list_order.xml
+++ b/Go_Laundry/app/src/main/res/layout/item_list_order.xml
@@ -1,30 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="174dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Nama"
-        android:textSize="24sp" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Terantar"
-        android:textSize="24sp" />
+        <TextView
+            android:id="@+id/txtAdminListNamaCust"
+            android:layout_width="174dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Nama"
+            android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Status"
-        android:textAlignment="textEnd"
-        android:textSize="24sp" />
+        <TextView
+            android:id="@+id/txtAdminListCustAntar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Terantar"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/txtAdminListCustStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Status"
+            android:textAlignment="textEnd"
+            android:textSize="24sp" />
+    </LinearLayout>
+
 </LinearLayout>
