--- a/Go_Laundry/app/src/main/res/layout/activity_customer_home.xml
+++ b/Go_Laundry/app/src/main/res/layout/activity_customer_home.xml
@@ -38,7 +38,7 @@
         android:text="" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txtCustHomeNama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
