--- a/Go_Laundry/app/src/main/res/layout/activity_cutomer_detail_layanan.xml
+++ b/Go_Laundry/app/src/main/res/layout/activity_cutomer_detail_layanan.xml
@@ -83,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="10dp"
-                android:text="Ya"
+                android:text="Tidak"
                 android:textAlignment="textEnd"
                 android:textSize="24sp" />
 
@@ -92,7 +92,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="10dp"
-                android:text="Ya"
+                android:text="Tidak"
                 android:textAlignment="textEnd"
                 android:textSize="24sp" />
 
@@ -119,7 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="10dp"
-                android:text="10000"
+                android:text="0"
                 android:textAlignment="textEnd"
                 android:textSize="24sp" />
 
